--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -54,12 +54,13 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 main.class=righttimereader.RightTimeReader
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 project.license=gpl30
 run.classpath=\
