--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.LGoodDatePicker-10.4.1.jar=D:\\Dropbox\\Code\\git\\RightTimeReader\\LGoodDatePicker-10.4.1.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/jcur002/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=/Users/jcur002/Library/Application Support/NetBeans/10.0/build.properties
