--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.LGoodDatePicker-10.4.1.jar=D:\\Dropbox\\Code\\git\\RightTimeReader\\LGoodDatePicker-10.4.1.jar
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/jcur002/Library/Application Support/NetBeans/10.0/build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\James\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
