--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,10 @@ dist.jar=${dist.dir}/RightTimeReader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.LGoodDatePicker-10.4.1.jar=dist\\lib\\LGoodDatePicker-10.4.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.LGoodDatePicker-10.4.1.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +57,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=true
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -67,6 +66,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=true
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=RightTimeReader
 main.class=righttimereader.RightTimeReader
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
